# fractal-crab

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
pkg/: README.md  fractal_crab.d.ts  fractal_crab.js  fractal_crab_bg.wasm  fractal_crab_bg.wasm.d.ts  package.json
src/: fragment.glsl  image.rs  lib.rs  mandelbrot.rs
