[package]
name = "fractal-crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.10.5"
js-sys = "0.3.60"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.60", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "ImageData"] }
derivative = "2.2.0"
num = "0.4.0"
colorgrad = "0.6.2"
